--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,4 +20,12 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  theme:
+    header:
+      lang: "Language"
+      total_items:
+        one: "You have 1 item in your basket which cost"
+        other: "You have %{count} items in your basket which cost"
+  buttons:
+    view_basket: "View basket"
+    checkout: "Checkout"
