--- a/config/locales/ua.yml
+++ b/config/locales/ua.yml
@@ -30,6 +30,12 @@ ua:
   language:
     ua: "Українська"
     en: "Англійська"
+  sidemenu:
+    main: "Головна"
+    about: "Про нас"
+    contacts: "Контакти"
+  product:
+    price: "Цiна"
   activerecord:
     models:
       shoppe/country:
@@ -115,7 +121,7 @@ ua:
         description: Description
         name: Name
         permalink: Permalink
-        price: Price
+        price: "Price"
         short_description: Short description
         sku: SKU
         weight: Weight
