--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -49,6 +49,10 @@ en:
     place_order: "Place your order"
     checkout: "Checkout"
     products: "Products"
+    sign_up: "Sign up"
+    sign_in: "Sign in"
+    forgot_pass: "Forgot your password?"
+    change_pass: "Change password"
   language:
     ua: "Ukrainian"
     en: "English"
@@ -63,3 +67,17 @@ en:
     description: "Active Bridge is an intentionally small team of highly technical Ruby on Rails developers who can develop systems tailored to meet all your business needs."
   contacts:
     title: "Contact us"
+  devise:
+    sessions:
+      signed_in: "Signed in successfully."
+    confirmations:
+      user:
+        confirmed: "Your email address has been successfully confirmed."
+    registrations:
+      user:
+        signed_up_but_unconfirmed: "A message with a confirmation link has been sent to your email address. Please follow the link to activate your account."
+  mailer:
+    confirmation:
+      welcome: "Welcome"
+      message: "You can confirm your account email through the link below:"
+      confirm: "Confirm my account"
