--- a/config/locales/ua.yml
+++ b/config/locales/ua.yml
@@ -56,6 +56,7 @@ ua:
       user:
         invalid: "Невірний логін або пароль."
     passwords:
+      updated: "Ваш парль було успішно змінено. Ви увішли у свій акаунт."
       user:
         send_instructions: "Ви отримаєте email з інструкціями як змінити пароль впродовж декількох хвилин."
     resend_confirm: "Переслати ще раз інструкції"
