--- a/config/locales/ua.yml
+++ b/config/locales/ua.yml
@@ -17,6 +17,7 @@ ua:
     item_added: "Товар доданий успішно!"
     basket_emptied: "Корзина очищена успішно"
     order_placed: "Замовлення було оформлено успішно"
+    is_empty: "Ваша корзина тепер пуста"
   table:
     quantity: "Кількість"
     product: "Товар"
