--- a/config/locales/ua.yml
+++ b/config/locales/ua.yml
@@ -16,6 +16,7 @@ ua:
     item_details: "Детальніше >>"
     add_to_basket: "В корзину"
     back: "<< Назад до списку"
+    continue_co: "Продовжити оформлення"
   flash:
     item_added: "Товар доданий успішно!"
     basket_emptied: "Корзина очищена успішно"
@@ -36,6 +37,21 @@ ua:
     sign_in: "Вхід"
     forgot_pass: "Забули пароль"
     change_pass: "Змінити пароль"
+    review_products: "Перевірка продуктів в вашій корзині"
+    complete_details: "Заповніть деталі для завершення оформлення"
+  form:
+    name: "Ім'я"
+    first_name: "Ім'я"
+    last_name: "Прізвище"
+    company_name: "Компанія (опціонально)"
+    your_mail: "Ваш E-Mail"
+    phone: "Ваш контактний телефон"
+    bill_address: "Платіжна адреса"
+    line1: "Лінія 1"
+    town: "Місто"
+    county: "Округ"
+    postcode:  "Поштовий індекс"
+    different_deliver: "Відправити на іншу адресу"
   language:
     ua: "Українська"
     en: "Англійська"
