--- a/config/locales/ua.yml
+++ b/config/locales/ua.yml
@@ -18,6 +18,7 @@ ua:
     back: "<< Назад до списку"
     continue_co: "Продовжити оформлення"
   flash:
+    confirmation_order_mail: "Інструкції по підтвердженню були відправлені. Будь ласка, перевірте ваш Email"
     item_added: "Товар доданий успішно!"
     basket_emptied: "Корзина очищена успішно"
     order_placed: "Замовлення було оформлено успішно"
@@ -28,6 +29,7 @@ ua:
     sub_total: "Проміжна сума"
     tax: "Податок"
     total: "Загальна сума"
+    order_id: "Номер замовлення"
   titles:
     basket: "Ваша корзина"
     place_order: "Оформіть Ваше замовлення"
